--- a/public/404.html
+++ b/public/404.html
@@ -51,6 +51,10 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+      .emoticon{
+    font-size: 130px;
+    color: gray;
+  }
   </style>
 </head>
 
@@ -58,10 +62,11 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+    <span class="emoticon">(;-;)</span><br><br>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Lo sentimos se acabo el pasto y se fueron las vacas.</p>
   </div>
 </body>
 </html>
+
+
