--- a/public/422.html
+++ b/public/422.html
@@ -51,6 +51,10 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+    .emoticon{
+    font-size: 130px;
+    color: gray;
+  }
   </style>
 </head>
 
@@ -58,10 +62,9 @@
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+    <span class="emoticon">\(o_o)/</span><br><br>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Lo sentimos una vaca no pudo guardar los cambios.</p>
   </div>
 </body>
 </html>
