--- a/public/500.html
+++ b/public/500.html
@@ -51,6 +51,10 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+    .emoticon{
+    font-size: 130px;
+    color: gray;
+  }
   </style>
 </head>
 
@@ -58,9 +62,9 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+    <span class="emoticon">(>_<)</span><br><br>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Lo sentimos una va se metio al sismta.</p>
   </div>
 </body>
 </html>
